--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="675.0" prefWidth="938.0" style="-fx-background-color: #DCEBFA; -fx-background-color: #F8FBFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FrontEnd.UserMenuController">
+<AnchorPane prefHeight="675.0" prefWidth="938.0" style="-fx-background-color: #DCEBFA; -fx-background-color: #F8FBFF;" stylesheets="@../../../style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FrontEnd.UserMenuController">
    <children>
       <VBox layoutX="-7.0" prefHeight="679.0" prefWidth="312.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -171,7 +171,7 @@
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="312.0" layoutY="112.0" prefHeight="568.0" prefWidth="627.0">
+      <Pane layoutX="312.0" layoutY="112.0" prefHeight="568.0" prefWidth="627.0" stylesheets="@../../../style.css">
          <children>
             <Label fx:id="warningLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="22.0" layoutY="424.0" prefHeight="35.0" prefWidth="312.0" textAlignment="CENTER" textFill="RED">
                <font>
