--- a/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/employeeMenu.fxml
@@ -170,7 +170,7 @@
                         <Font name="Arial Bold" size="24.0" />
                     </font>
                 </Label>
-                <Label fx:id="fullName" layoutX="22.0" layoutY="124.0" prefHeight="27.0" prefWidth="390.0" text="Nothing came up" textAlignment="CENTER">
+                <Label fx:id="fullName" layoutX="103.0" layoutY="93.0" prefHeight="27.0" prefWidth="305.0" text="Your name" textAlignment="CENTER">
                     <font>
                         <Font name="Arial Bold" size="24.0" />
                     </font>
@@ -193,8 +193,6 @@
             </Label>
             <ListView fx:id="listOfCustomers" layoutX="13.0" layoutY="351.0" prefHeight="201.0" prefWidth="307.0" />
             <ListView fx:id="listOfEmployee" layoutX="320.0" layoutY="351.0" prefHeight="201.0" prefWidth="307.0" />
-            <Button layoutX="97.0" layoutY="96.0" mnemonicParsing="false" onAction="#onActionChangeName" onMouseEntered="#confirmHoverEntry" onMouseExited="#confirmHoverExit" prefHeight="25.0" prefWidth="92.0" text="Change name" />
-            <TextField fx:id="changeIDTextField" layoutX="197.0" layoutY="96.0" prefHeight="25.0" prefWidth="200.0" />
             <Button layoutX="87.0" layoutY="310.0" mnemonicParsing="false" onAction="#onActionChooseCustomer" text="Select a customer">
                <font>
                   <Font name="Arial" size="17.0" />
