--- a/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
@@ -122,7 +122,7 @@
             <Font name="Arial" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="warningText" layoutX="629.0" layoutY="347.0" prefHeight="149.0" prefWidth="156.0" textFill="RED">
+      <Label fx:id="warningText" layoutX="629.0" layoutY="347.0" textFill="RED">
          <font>
             <Font name="Arial" size="12.0" />
          </font></Label>
